# Gemini

./: CMakeLists.txt  ChangeLog.txt  README.md
batch/: debug_x86_01_build.bat  debug_x86_02_deployqt.bat  x86_02_deployqt.bat
installer/: gemini.iss  gemini_install_image_small.bmp.bak  gemini_license_ko.rtf
installer/codesign/: THA_CODE_CODT309424.pfx
src/: CMakeLists.txt  gemini_constants.h  main.cpp
src/calcCP/: CSVBarobook.cpp  CSVBarobook.h  CSVBookcube.cpp  CSVBookcube.h  CSVComico.cpp  CSVComico.h  CSVEpyrus.cpp  CSVEpyrus.h  CSVGoogle.cpp  CSVGoogle.h  CSVJustoon.cpp  CSVJustoon.h  CSVKakao.cpp  CSVKakao.h  CSVKepub.cpp  CSVKepub.h  CSVKyobo.cpp  CSVKyobo.h  CSVMrblue.cpp  CSVMrblue.h  CSVMunpia.cpp  CSVMunpia.h  CSVNaver.cpp  CSVNaver.h  CSVOebook.cpp  CSVOebook.h  CSVOnestore.cpp  CSVOnestore.h  CSVRidi.cpp  CSVRidi.h  CSVTocsoda.cpp  CSVTocsoda.h  CalcCPDlg.cpp  CalcCPDlg.h
src/calcTotal/: CSVTotalBook.cpp  CSVTotalBook.h  CSVTotalCP.cpp  CSVTotalCP.h  CSVTotalSeries.cpp  CSVTotalSeries.h  CalcTotalDlg.cpp  CalcTotalDlg.h
src/formFiles/: CalcCPDlg.ui  CalcTotalDlg.ui  MainWindow.ui
src/mainUI/: CSVManager.cpp  CSVManager.h  CalcManager.cpp  CalcManager.h  MainWindow.cpp  MainWindow.h  SPCSVManager.cpp  SPCSVManager.h
src/misc/: LimitDate.cpp  LimitDate.h  ProgressWidget.cpp  ProgressWidget.h  SettingData.cpp  SettingData.h  TinyAES.cpp  TinyAES.h
src/qtcsv/: reader.cpp  writer.cpp
src/resFiles/: icon.rc  resources.qrc
